codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_render.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
  提交问题前，是否上传日志？

  日志可能包含本次 Codex 会话的完整对话历史
  这些日志将保留 90 天，仅用于故障排查

  上传前你可以先查看日志的具体内容
  <LOG_PATH>


› 1. 是      将当前 Codex 会话日志分享给团队用于故障排查。
  2. 否
  3. 取消
